--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,25 @@
 {
     "headers": [
       {
-       "source": "/Weather-App/assets/:path*",
+        "source": "/Weather-App/assets/:path*",
         "headers": [
           {
             "key": "Content-Type",
-            "value": "application/javascript"
+            "value": "application/javascript",
+            "condition": "filename.endsWith('.js')"
+          },
+          {
+            "key": "Content-Type",
+            "value": "text/css",
+            "condition": "filename.endsWith('.css')"
           }
         ]
-      },
+      }
+    ],
+    "routes": [
       {
-        "source": "/Weather-App/assets/(.*).css",
-        "headers": [
-          {
-            "key": "Content-Type",
-            "value": "text/css"
-          }
-        ]
+        "src": "/Weather-App/(.*)",
+        "dest": "/Weather-App/$1"
       }
     ]
   }
